--- a/Front/music-player/src/NavBar/navbar.css
+++ b/Front/music-player/src/NavBar/navbar.css
@@ -13,6 +13,7 @@
     background: linear-gradient(to right, red, orange);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    cursor: pointer;
   }
   
   
