login save user data to local storage

--- a/Front/music-player/src/NavBar/navbar.css
+++ b/Front/music-player/src/NavBar/navbar.css
@@ -50,3 +50,10 @@
     background: linear-gradient(to right, red, orange);
     color: white;
   }
+
+  .navbar__username {
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+  }
