--- a/Front/music-player/src/Home/card.css
+++ b/Front/music-player/src/Home/card.css
@@ -98,4 +98,9 @@
   .card__image:hover {
     opacity: 0.5;
   }
-  
+  h1{
+    color: #fff;
+    font-size: 30px;
+    font-weight: bold;
+    margin: 20px;
+  }
